<resources>
    <string name="app_name">mobv</string>
    <string name="login">Login</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiYS1yYWQiLCJhIjoiY20xa3lkbDN3MDN0YjJqc24yNzU4MnhnaiJ9.ShR_aNjIlVtYCg6EErAcOg</string>
    <string name="register">Register</string>
    <string name="welcome">Ketchup with friends</string>
    <string name="ph_pw">password</string>
    <string name="ph_name">username</string>
    <string name="name_title">Name</string>
    <string name="pw_title">Password</string>
    <string name="ph_email">enter email</string>
    <string name="repeat_pw_title">Repeat password</string>
    <string name="emaiL_title" translatable="false">Email</string>
    <string name="ph_repeat_pw">repeat password</string>
    <string name="login_title">Login to Your Account</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="register_title">Create an account</string>
    <string name="change_pw">CHANGE PASSWORD</string>
    <string name="old_pw_hint">enter Old Password</string>
    <string name="old_pw_title">Old Password</string>
    <string name="new_pw_title">New password</string>
    <string name="new_pw_hint">enter new password</string>
    <string name="re_enter_pw_title">Re-enter new password</string>
    <string name="re_enter_pw_hint">enter new password</string>
    <string name="cancel_btn">Cancel</string>
    <string name="confirm_btn">Confirm</string>
    <string name="reset_btn" translatable="false">Reset</string>
    <string name="location_sharing_is_turned_off">Location sharing is turned OFF!</string>
</resources>