<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.example.mobv.viewModels.AuthViewModel" />
        <variable
            name="registrationFragment"
            type="com.example.mobv.fragments.RegistrationFragment" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main"
        android:padding="20dp"
        android:background="@color/background_color">

        <TextView
            android:id="@+id/reg_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            style="@style/LargeBoldTextStyle"
            android:paddingBottom="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" /> <!-- Centered title -->

        <TextView
            android:id="@+id/label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emaiL_title"
            style="@style/BaseTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reg_title" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ph_email"
            android:text="@={model.email}"
            style="@style/PlaceHolderText"
            app:layout_constraintTop_toBottomOf="@id/label1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_title"
            style="@style/BaseTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText1" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ph_name"
            android:text="@={model.username}"
            style="@style/PlaceHolderText"
            app:layout_constraintTop_toBottomOf="@id/label2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/label3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pw_title"
            style="@style/BaseTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText2" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ph_pw"
            style="@style/PlaceHolderText"
            android:text="@={model.password}"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/label3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/label4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_pw_title"
            style="@style/BaseTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText3" />

        <EditText
            android:id="@+id/editText4"
            style="@style/PlaceHolderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ph_repeat_pw"
            android:text="@={model.repeatPassword}"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label4" />

        <Button
            android:id="@+id/reg_btn"
            style="@style/ActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{()->model.registerUser()}"
            app:layout_constraintTop_toBottomOf="@+id/editText4"
            app:snackbarMessage="@{model.authResult.first}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>