<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/old_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_pw_title"
        style="@style/BaseTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/old_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/old_pw_hint"
        android:inputType="textPassword"
        style="@style/PlaceHolderText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/old_password_label"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/new_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_pw_title"
        style="@style/BaseTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/old_password"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_pw_hint"
        android:inputType="textPassword"
        style="@style/PlaceHolderText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_password_label"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/confirm_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/re_enter_pw_title"
        style="@style/BaseTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_password"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/re_enter_pw_hint"
        android:inputType="textPassword"
        style="@style/PlaceHolderText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_label"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_btn"
        style="@style/ActionButton"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintWidth_percent="0.4"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_btn"
        style="@style/NonActionButton"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        app:layout_constraintStart_toEndOf="@+id/confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.4"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
