<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.example.mobv.viewModels.AuthViewModel" />
        <variable
            name="loginFragment"
            type="com.example.mobv.fragments.LoginFragment" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main"
        android:background="@color/background_color"
        android:padding="20dp">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            style="@style/LargeBoldTextStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingBottom="40dp"
            android:textColor="@color/text_primary"
            app:snackbarMessage="@{model.authResult.first}"/>

        <TextView
            android:id="@+id/label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_title"
            style="@style/BaseTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleText"/>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ph_name"
            android:text="@={model.username}"
            style="@style/PlaceHolderText"
            app:layout_constraintTop_toBottomOf="@+id/label1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pw_title"
            style="@style/BaseTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText1" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ph_pw"
            android:text="@={model.password}"
            style="@style/PlaceHolderText"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/label2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="32dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="@style/ActionButton"
            android:onClick="@{()->model.loginUser()}"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/forgot_password_btn"
            android:layout_marginBottom="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_password_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/accent_color"
            android:onClick="@{()->loginFragment.showResetPasswordDialog()}"
            app:layout_constraintTop_toBottomOf="@+id/login_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            style="@style/NonActionButton"
            app:snackbarMessage="@{model.resetPasswordResult}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>